# starnion-stock

./: README.md
backend/: .env.example  .gitignore  pyproject.toml  pyrightconfig.json
backend/app/: config.py  main.py  scheduler.py
backend/app/delivery/http/: dependencies.py  router.py
backend/app/domain/entity/: ai_analysis.py  disclosure.py  exit_simulation.py  indicator.py  investor_flow.py  macro.py  market_briefing.py  market_news.py  master_score.py  news.py  price_level.py  sector.py  stock.py  trade.py
backend/app/domain/repository/: ai_analysis_repository.py  disclosure_repository.py  llm_repository.py  news_repository.py  price_level_repository.py  stock_repository.py  trade_repository.py
backend/app/infrastructure/dart/: disclosure_repository_impl.py  financial_client.py
backend/app/infrastructure/exit/: exit_calculator.py
backend/app/infrastructure/indicator/: calculator.py  level_detector.py
backend/app/infrastructure/krx/: corp_list_client.py
backend/app/infrastructure/llm/: claude_client.py  llm_repository_impl.py  prompts.py
backend/app/infrastructure/macro/: macro_repository_impl.py
backend/app/tools/: update_stock_master.py
backend/app/usecase/: ai_analysis_usecase.py  briefing_usecase.py  disclosure_usecase.py  exit_simulation_usecase.py  hot_stocks_usecase.py  indicator_usecase.py  level_usecase.py  macro_usecase.py  market_briefing_usecase.py  market_news_usecase.py  master_score_usecase.py  news_usecase.py  sector_usecase.py  signal_usecase.py  stock_usecase.py  trade_usecase.py
backend/data/: stock_master.json
(+110 files in other folders)
