[project]
name = "stock-war-room-backend"
version = "0.1.0"
description = "Stock War Room FastAPI backend — Clean Architecture + pykrx/dart-fss/claude-agent-sdk."
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Korean stock data
    # pykrx 는 KRX 서버의 AJAX 스키마 변경으로 대부분의 API 가 400 을 반환하여
    # 제거됨. 종목/시세/펀더멘탈/지수 모두 네이버 금융 크롤링으로 대체 (2026-04).
    "dart-fss>=0.4.3",
    "finance-datareader>=0.9.50",
    # Technical indicators & data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    # News crawling
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "lxml>=5.3.0,<6.1",
    # LLM (Claude Code CLI subscription)
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.5.0",
    # Persistence
    "aiosqlite>=0.20.0",
    # Utils
    "python-dateutil>=2.9.0",
    "html5lib>=1.1",
]

[tool.uv]
package = false
